fixed css and js links in index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,8 @@
 
 		<!-- external CSS link -->
 	
-		<link rel="stylesheet" href="/public/css/normalize.css">
-		<link rel="stylesheet" href="/public/css/style.css">
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 
@@ -28,6 +28,6 @@
         </ul>
         
 	
-		<script type="text/javascript" src="/public/js/main.js"></script>
+		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
